--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,12 @@ img {
 text-align: center;
 }
 
+.nucleus__grid{
+
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 @media(min-width:768px){ 
     .nucleus__grid{
         display: grid;
@@ -193,3 +199,34 @@ text-align: center;
     }
     
 }
+
+.listado{
+
+}
+
+.listado__elemento{
+    box-shadow: 0px 0px  15px 3px  rgb(0 0 0 / .15);
+    padding: 2rem;
+    margin-bottom: 5rem;
+    transition-property: transform;
+    transition-duration: 300ms;
+}
+
+.listado__elemento:hover{
+transform: scale(1.1);
+}
+
+.listado__heading{
+font-size: 3rem;
+color: var(--primario);
+margin: 0;
+}
+
+.listado__texto{
+margin: 0;
+font-size: 2rem;
+}
+
+
+
+
