--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,18 @@ img {
     display: block;
 }
 
+
+
 [class$="__contenedor"]{
     
     max-width: 120rem;
     margin: 0 auto;
     width: 90%;
+}
+
+[class$="__heading"]{
+    text-align: center;
+    margin-bottom: 5rem;
 }
 
 /* HEADER */
@@ -112,7 +119,7 @@ img {
 
 
 .header__heading {
-    text-align: center;
+   
     font-size: 3rem;
 }
 
@@ -180,9 +187,7 @@ img {
     margin-top: 3rem;
 }
 
-.nucleus__heading{
-text-align: center;
-}
+
 
 .nucleus__grid{
 
@@ -200,11 +205,9 @@ text-align: center;
     
 }
 
-.listado{
-
-}
 
 .listado__elemento{
+    background-color: var(--blanco);
     box-shadow: 0px 0px  15px 3px  rgb(0 0 0 / .15);
     padding: 2rem;
     margin-bottom: 5rem;
@@ -227,6 +230,50 @@ margin: 0;
 font-size: 2rem;
 }
 
+.seguridad{
+background-color: var(--primario);
+padding: 20rem 0;
+position: relative;
+margin: 10rem 0;
+overflow: hidden;
+}
 
+.seguridad::before,
+.seguridad::after{
+background-color: var(--blanco);
+content: '';
+height: 20rem;
+width: 120%;
+position: absolute;
+}
+
+.seguridad::before{
+top: -10rem;
+left: 0;
+transform: rotate(3deg);
+}
+
+.seguridad::after{
+    bottom: -10rem;
+    left: 0;
+    transform: rotate(3deg);
+}
+
+.seguridad__heading{   
+    color: var(--blanco);
+}
+
+@media(min-width:768px){ 
+    .seguridad__grid{
+        display: grid;
+        grid-template-columns:repeat(2, 1fr) ;
+        column-gap: 5rem;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+
+/* COMISIONES */
 
 
