--- a/css/styles.css
+++ b/css/styles.css
@@ -219,10 +219,36 @@ img {
 transform: scale(1.1);
 }
 
+@media(min-width:768px){ 
+    .listado__elemento--2col{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+    }   
+    
+}
+
 .listado__heading{
 font-size: 3rem;
 color: var(--primario);
 margin: 0;
+}
+
+.listado__numero{
+    color: var(--primario);
+    font-size: 6rem;
+    margin: 0;
+    font-weight: 900;
+    text-align: center;
+}
+
+@media(min-width:768px){ 
+    .listado__numero{
+flex-basis: 20rem;
+text-align: right;
+font-size: 4rem;
+    }
 }
 
 .listado__texto{
@@ -276,4 +302,33 @@ transform: rotate(3deg);
 
 /* COMISIONES */
 
+@media(min-width:768px){ 
+    .comisiones__grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 5rem;
+        align-items: flex-end;
+    }
+
+}
+
+
+@media(min-width:998px){ 
+    .comisiones__grid{       
+        align-items: center;
+    }
+
+}
+
+.comisiones__texto{
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: 700;
+}
+
+@media(min-width:768px){ 
+    .comisiones__texto{
+        text-align: left;
+    }
+}
 
